kodu naming to index

--- a/katse3.html
+++ b/katse3.html
@@ -138,7 +138,7 @@
     <!--<div class="title">geidi raadik</div>-->
 
     <div class="buttons">
-      <a href="kodu.html" class="button">Kodu</a>
+      <a href="index.html" class="button">Kodu</a>
       <a href="katse3.html" class="button">Teenused</a>
       <a href="katse.html" class="button">Kontakt</a>
     </div>
@@ -150,7 +150,7 @@
     </div>
 
     <div class="dropdown" id="dropdown">
-      <a href="kodu.html" class="button">Kodu</a>
+      <a href="index.html" class="button">Kodu</a>
       <a href="katse3.html" class="button">Teenused</a>
 
       <a href="katse.html" class="button">Kontakt</a>
