--- a/teenused.html
+++ b/teenused.html
@@ -2,43 +2,33 @@
 <html lang="et">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teenused – Geidi Raadik</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
-
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; font-family: "Century Gothic"; }
 
     html, body {
       height: 100%;
-      background: url('OIP.jpg') center center / cover no-repeat;
-      font-family: "Century Gothic", Arial, sans-serif;
+      background: url('esimene.png') center center / cover no-repeat;
       display: flex;
       flex-direction: column;
     }
 
+    /* Top Bar */
     .top-bar {
       background-color: #D1C7BE;
       padding: 10px 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      position: relative;
       z-index: 2;
     }
 
-    .top-bar .title {
-      font-weight: bold;
-      font-size: 1.2em;
-    }
+    .top-bar .title { font-weight: bold; font-size: 1.2em; }
 
-    .top-bar .buttons {
-      display: flex;
-      gap: 10px;
-    }
-
+    .buttons { display: flex; gap: 10px; }
     .button {
       background-color: #eee;
       border: none;
@@ -48,18 +38,35 @@
       color: black;
       border-radius: 5px;
     }
+    .star-button::after { content: "★"; margin-left: 5px; }
 
-    .star-button::after {
-      content: "★";
-      margin-left: 5px;
+    /* Hamburger Menu */
+    .hamburger { display: none; flex-direction: column; gap: 4px; cursor: pointer; }
+    .hamburger div { width: 25px; height: 3px; background-color: black; }
+    .dropdown {
+      display: none;
+      flex-direction: column;
+      background-color: #D1C7BE;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+    }
+    .dropdown a, .dropdown button {
+      padding: 10px 20px;
+      border-top: 1px solid #ccc;
+      background-color: #D1C7BE;
+      text-align: left;
+      width: 100%;
     }
 
+    /* Overlay layout */
     .overlay {
       flex: 1;
-      background-color: rgba(255, 255, 255, 0.85);
-      padding: 20px;
       display: flex;
       gap: 20px;
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.5);
     }
 
     .left-panel {
@@ -73,34 +80,18 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
-    .left-panel h2 {
-      font-size: 1.8em;
-      color: #333;
-      text-align: center;
-      margin-bottom: 20px;
-    }
+    .left-panel h2 { font-size: 1.8em; color: #333; text-align: center; margin-bottom: 20px; }
 
-    .service-list {
-      list-style: none;
-      padding: 0;
-    }
-
+    .service-list { list-style: none; padding: 0; }
     .service-list li {
-      margin: 10px 0;
-    }
+        margin: 10px 0;
+        display: flex;           /* Make the li a flex container */
+        justify-content: space-between; /* Push content to ends */
+        align-items: center;     /* Vertically center text */
+        }
 
-    .service-link {
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    .price {
-      margin-left: 15px;
-      font-weight: normal;
-      color: #666;
-    }
+    .service-link { text-decoration: none; color: #333; font-weight: bold; cursor: pointer; }
+    .price { margin-left: 15px; font-weight: normal; color: #666; }
 
     .right-panel {
       flex: 2;
@@ -109,20 +100,8 @@
       padding: 20px;
     }
 
-    /* Modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.5);
-      justify-content: center;
-      align-items: center;
-    }
-
+    /* Modal */
+    .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.5); justify-content: center; align-items: center; }
     .modal-content {
       background-color: #fff;
       padding: 20px 30px;
@@ -132,44 +111,80 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.3);
       animation: fadeIn 0.3s ease;
     }
+    .modal .close { position: absolute; top: 10px; right: 15px; font-size: 20px; cursor: pointer; }
 
-    .modal .close {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 20px;
-      cursor: pointer;
+    .button-wrapper {
+  text-align: center; 
+  margin-top: 20px;  
+}
+
+.button:hover {
+  background-color: #a6a9aa; 
+}
+
+
+    @keyframes fadeIn { from {opacity: 0; transform: scale(0.9);} to {opacity: 1; transform: scale(1);} }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .buttons { display: none; }
+      .hamburger { display: flex; }
+
+      .overlay { flex-direction: column; }
+      .left-panel { width: 100%; flex: unset; }
+      .right-panel { width: 100%; flex: unset; height: 50px; }
     }
 
-    @keyframes fadeIn {
-      from {opacity: 0; transform: scale(0.9);}
-      to {opacity: 1; transform: scale(1);}
-    }
+
+    
   </style>
 </head>
 <body>
 
+  <!-- Top Bar -->
   <div class="top-bar">
-    <div class="title">geidi raadik</div>
+        <a href="index.html">
+    <img src="logo1.PNG" alt="Logo" width="100" height="60">
+  </a>
+
+    <!--<div class="title">geidi raadik</div>-->
+
     <div class="buttons">
-      <a href="home.html" class="button">Home</a>
-      <button class="button">Button 1</button>
-      <button class="button">Button 2</button>
-      <button class="button star-button">Favourites</button>
-      <a href="contact.html" class="button">Kontakt</a>
+      <a href="index.html" class="button">Kodu</a>
+      <a href="teenused.html" class="button">Teenused</a>
+      <a href="kontakt.html" class="button">Kontakt</a>
+    </div>
+
+    <div class="hamburger" id="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+
+    <div class="dropdown" id="dropdown">
+      <a href="index.html" class="button">Kodu</a>
+      <a href="teenused.html" class="button">Teenused</a>
+      <a href="kontakt.html" class="button">Kontakt</a>
     </div>
   </div>
 
+  <!-- Main Content -->
   <div class="overlay">
     <div class="left-panel">
       <h2>Teenused</h2>
       <ul class="service-list">
-        <li><a href="#" class="service-link" data-service="horse1">Basic Riding Lesson</a> <span class="price">€30</span></li>
-        <li><a href="#" class="service-link" data-service="horse2">Advanced Jumping</a> <span class="price">€50</span></li>
-        <li><a href="#" class="service-link" data-service="horse3">Horse Care & Grooming</a> <span class="price">€25</span></li>
-        <li><a href="#" class="service-link" data-service="horse4">Trail Riding Adventure</a> <span class="price">€40</span></li>
-        <li><a href="#" class="service-link" data-service="horse5">Private Training Session</a> <span class="price">€60</span></li>
+        <li><a href="#" class="service-link" data-service="konsultatsioon">Konsultatsioon</a> <span class="price">40€</span></li>
+        <li><a href="#" class="service-link" data-service="treeningkava">Treeningkava</a> <span class="price">65€</span></li>
+        <li><a href="#" class="service-link" data-service="personaaltreening">Personaaltreening ~60min</a> <span class="price"></span></li>
+        <li><a href="#" class="service-link" data-service="online">Online juhendamine (minimaalselt 3 kuud)</a> <span class="price">98.90€/kuus</span></li>
+        <li><a href="#" class="service-link" data-service="toitumiskava">Personaalne toitumiskava</a> <span class="price">45€</span></li>
+        <li><a href="#" class="service-link" data-service="kombo">Personaalne toitumis- ja treeningkava kombo</a> <span class="price">99.90€</span></li>
+
       </ul>
+
+      <div class="button-wrapper">
+    <a href="kontakt.html" class="button">Võta minuga ühendust!</a>
+  </div>
     </div>
 
     <div class="right-panel">
@@ -186,29 +201,38 @@
   </div>
 
   <script>
+    // Modal logic
     const modal = document.getElementById("horse-modal");
     const modalDescription = document.getElementById("modal-description");
     const closeBtn = modal.querySelector(".close");
 
     const serviceDescriptions = {
-      horse1: "Basic Riding Lesson: Learn the fundamentals of riding, including posture, balance, and simple exercises.",
-      horse2: "Advanced Jumping: Improve your jumping technique and learn to clear higher obstacles safely.",
-      horse3: "Horse Care & Grooming: Learn grooming, saddling, and basic care to build trust with your horse.",
-      horse4: "Trail Riding Adventure: Enjoy a scenic trail ride with a trained guide, suitable for all levels.",
-      horse5: "Private Training Session: One-on-one personalized training to focus on specific riding goals."
+      konsultatsioon: "1:1 kohtumine/ kõne/videokõne, kus saame arutada Sinu eesmärke, treeningut, toitumist või arutada mistahes tervise teemal.<br><br>Sobib ideaalselt kui soovid personaalset juhendamist ja soovitusi.",
+      treeningkava: "Koostan personaalse treeningkava vastavalt Sinu eesmärkidele, võimalustele ja arvestades Sinu tervislikku seisundit ja kehalisi iseärasusi.<br>Treeningkava on oluline Sinu eesmärkide saavutamisel. Kavas on võimalik teha muudatusi 30 päeva jooksul peale treeningkava tellimust.<br><br>Kui treeningkava kohta tekib küsimusi, olen alati olemas.",
+      personaaltreening: "Personaaltreening on treeningvorm, kus töötan Sinuga individuaalselt, keskendudes just Sinu eesmärkideleja kehalisele vormile. Näitan kuidas harjutusi õigesti sooritada, et Sa endale liiga ei teeks. Treeningud on personaalsed, ohutud ja motiveerivad- aitavad Sul saavutada tulemused samm-sammult.<br><br>Personaaltreeningud<br>1x 50€<br>3x 140€<br>5x 225€<br><br>Ei taha üksi tulla? Pole probleemi! Võta sõber kaasa ja on motivatsiooni ja lõbu topelt!<br><br>Personaaltreening sõbraga<br>1x 85€<br>3x 240€<br>8x 520€",
+      online: "Ideaalne, kui soovid mitu kuud minu tuge, juhendamist, ilma et peaksid füüsiliselt samas linnas olema. Võid treenida kodus/jõusaalis, reisil- mina olen olemas ja hoian Sind rajal.<br><br>Mida teenus sisaldab:<br>● Personaalne treeningkava<br>● Personaalne toitumiskava/toitumisjuhised<br>● Iga 4-6 nädala tagant värskendatud treeningkava järgides Sinu eesmärke<br>●1 x kuus videokõne, et arutada arengut ja vaadata kuidas Sul läinud on.",
+      toitumiskava: "Koostan Sulle personaalse toitumiskava, mis toetab Sinu eesmärke ja elustiili. Kava on kohandatud Sinu vajadustele ja eelistustele ning sisaldab praktilisi juhiseid, et süüa tervislikult ja eesmärki toetavalt.<br><br>Küsimuste korral olen alati olemas!",
+      kombo: "Koostan Sulle individuaalse toitumis- ja treeningkava, mis töötavad käsikäes Sinu eesmärkide saavutamiseks. Kava on kohandatud Sinu vajadustele, elustiilile ja võimalustele, et saavutada maksimaalne tulemus.<br><br>Küsimuste korral, olen alati olemas! "
     };
 
     document.querySelectorAll(".service-link").forEach(link => {
       link.addEventListener("click", function(e){
         e.preventDefault();
         const serviceId = this.getAttribute("data-service");
-        modalDescription.textContent = serviceDescriptions[serviceId];
+        modalDescription.innerHTML = serviceDescriptions[serviceId];
         modal.style.display = "flex";
       });
     });
 
     closeBtn.addEventListener("click", () => { modal.style.display = "none"; });
     window.addEventListener("click", (e) => { if(e.target === modal){ modal.style.display = "none"; } });
+
+    // Hamburger menu toggle
+    const hamburger = document.getElementById('hamburger');
+    const dropdown = document.getElementById('dropdown');
+    hamburger.addEventListener('click', () => {
+      dropdown.style.display = dropdown.style.display === 'flex' ? 'none' : 'flex';
+    });
   </script>
 
 </body>
