--- a/teenused.html
+++ b/teenused.html
@@ -173,12 +173,12 @@
     <div class="left-panel">
       <h2>Teenused</h2>
       <ul class="service-list">
-        <li><a href="#" class="service-link" data-service="konsultatsioon">Konsultatsioon</a> <span class="price">40€</span></li>
-        <li><a href="#" class="service-link" data-service="treeningkava">Treeningkava</a> <span class="price">65€</span></li>
+        <li><a href="#" class="service-link" data-service="konsultatsioon">Konsultatsioon</a> <span class="price">30€</span></li>
+        <li><a href="#" class="service-link" data-service="treeningkava">Treeningkava</a> <span class="price">50€</span></li>
         <li><a href="#" class="service-link" data-service="personaaltreening">Personaaltreening ~60min</a> <span class="price"></span></li>
-        <li><a href="#" class="service-link" data-service="online">Online juhendamine (minimaalselt 3 kuud)</a> <span class="price">98.90€/kuus</span></li>
-        <li><a href="#" class="service-link" data-service="toitumiskava">Personaalne toitumiskava</a> <span class="price">45€</span></li>
-        <li><a href="#" class="service-link" data-service="kombo">Personaalne toitumis- ja treeningkava kombo</a> <span class="price">99.90€</span></li>
+        <li><a href="#" class="service-link" data-service="online">Online juhendamine (minimaalselt 3 kuud)</a> <span class="price">89.90€/kuus</span></li>
+        <li><a href="#" class="service-link" data-service="toitumiskava">Personaalne toitumiskava</a> <span class="price">40€</span></li>
+        <li><a href="#" class="service-link" data-service="kombo">Personaalne toitumis- ja treeningkava kombo</a> <span class="price">80€</span></li>
 
       </ul>
 
@@ -209,7 +209,7 @@
     const serviceDescriptions = {
       konsultatsioon: "1:1 kohtumine/ kõne/videokõne, kus saame arutada Sinu eesmärke, treeningut, toitumist või arutada mistahes tervise teemal.<br><br>Sobib ideaalselt kui soovid personaalset juhendamist ja soovitusi.",
       treeningkava: "Koostan personaalse treeningkava vastavalt Sinu eesmärkidele, võimalustele ja arvestades Sinu tervislikku seisundit ja kehalisi iseärasusi.<br>Treeningkava on oluline Sinu eesmärkide saavutamisel. Kavas on võimalik teha muudatusi 30 päeva jooksul peale treeningkava tellimust.<br><br>Kui treeningkava kohta tekib küsimusi, olen alati olemas.",
-      personaaltreening: "Personaaltreening on treeningvorm, kus töötan Sinuga individuaalselt, keskendudes just Sinu eesmärkideleja kehalisele vormile. Näitan kuidas harjutusi õigesti sooritada, et Sa endale liiga ei teeks. Treeningud on personaalsed, ohutud ja motiveerivad- aitavad Sul saavutada tulemused samm-sammult.<br><br>Personaaltreeningud<br>1x 50€<br>3x 140€<br>5x 225€<br><br>Ei taha üksi tulla? Pole probleemi! Võta sõber kaasa ja on motivatsiooni ja lõbu topelt!<br><br>Personaaltreening sõbraga<br>1x 85€<br>3x 240€<br>8x 520€",
+      personaaltreening: "Personaaltreening on treeningvorm, kus töötan Sinuga individuaalselt, keskendudes just Sinu eesmärkideleja kehalisele vormile. Näitan kuidas harjutusi õigesti sooritada, et Sa endale liiga ei teeks. Treeningud on personaalsed, ohutud ja motiveerivad- aitavad Sul saavutada tulemused samm-sammult.<br><br>Personaaltreeningud<br>1x 40€<br>3x 110€<br><br>Ei taha üksi tulla? Pole probleemi! Võta sõber kaasa ja on motivatsiooni ja lõbu topelt!<br><br>Personaaltreening sõbraga<br>1x 65€<br>3x 180€",
       online: "Ideaalne, kui soovid mitu kuud minu tuge, juhendamist, ilma et peaksid füüsiliselt samas linnas olema. Võid treenida kodus/jõusaalis, reisil- mina olen olemas ja hoian Sind rajal.<br><br>Mida teenus sisaldab:<br>● Personaalne treeningkava<br>● Personaalne toitumiskava/toitumisjuhised<br>● Iga 4-6 nädala tagant värskendatud treeningkava järgides Sinu eesmärke<br>●1 x kuus videokõne, et arutada arengut ja vaadata kuidas Sul läinud on.",
       toitumiskava: "Koostan Sulle personaalse toitumiskava, mis toetab Sinu eesmärke ja elustiili. Kava on kohandatud Sinu vajadustele ja eelistustele ning sisaldab praktilisi juhiseid, et süüa tervislikult ja eesmärki toetavalt.<br><br>Küsimuste korral olen alati olemas!",
       kombo: "Koostan Sulle individuaalse toitumis- ja treeningkava, mis töötavad käsikäes Sinu eesmärkide saavutamiseks. Kava on kohandatud Sinu vajadustele, elustiilile ja võimalustele, et saavutada maksimaalne tulemus.<br><br>Küsimuste korral, olen alati olemas! "
